<resources>
    <string name="app_name">Lead</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <string name="action_edit_journal">Edit</string>
    <string name="action_publish_journal">Publish</string>
    <string name="action_image">Select Image</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>
    <string name="action_detail">Detail</string>
    <string name="action_cancel">Cancel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_login_lead">Welcome to Lead</string>
    <string name="button_text_login">Login</string>

    <string name="facebook_app_id">1594135340854170</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>

    <string name="test_string">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?
        Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
        Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat. On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted.
        The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains.</string>
    <string name="title_activity_specific_journal">SpecificJournalActivity</string>
    <string name="title_activity_picture">PictureActivity</string>
    <string name="title_activity_edit_specific_journal">EditSpecificJournalActivity</string>
    <string name="title_activity_add_new_specific_journal">AddNewSpecificJournalActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>


    <string name="dialog_toolbar_add_new_tag">Add New Tag</string>
    <string name="dialog_toolbar_add_new_project">Add New Project</string>
    <string name="dialog_toolbar_edit_tag">Edit Tag</string>
    <string name="dialog_toolbar_edit_project">Edit Project</string>
    <string name="dialog_toolbar_delete_tag">Delete Tag</string>
    <string name="dialog_toolbar_delete_project">Delete Project</string>
    <string name="dialog_toolbar_tag_title">Select Tags</string>
    <string name="dialog_toolbar_project_title">Select A Project</string>
    <string name="dialog_description_delete_tag">Delete this tag?</string>
    <string name="dialog_description_delete_project">Delete this project?</string>
    <string name="dialog_description_save_new_journal">You have not save this journal.\nDo you want to save?</string>
    <string name="dialog_toolbar_upload_file_progress_title">Uploading Progress</string>
    <string name="dialog_toolbar_save">Save</string>

    <string name="dialog_overflow_menu_edit">Edit</string>
    <string name="dialog_overflow_menu_delete">Delete</string>

    <string name="dialog_set">Set</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_discard">Discard</string>
    <string name="dialog_save">Save</string>

    <string name="dialog_editext_tag_hint">Tag name</string>
    <string name="dialog_editext_project_hint">Project name</string>

    <string name="dialog_option_title">Select Media From</string>
    <string name="dialog_option_title_2">Select Picture From</string>
    <string name="dialog_option_gallery">Gallery</string>
    <string name="dialog_option_facebook">Facebook</string>
    <string name="dialog_option_camera">Camera</string>

    <string name="button_set_as_album_cover">Set Cover</string>
    <string name="profile_side_note">You have login as a facebook user. You can only edit your personal contact, address and country.</string>




    <string name="no_journal_list_text_1">No Journal Entry</string>
    <string name="no_journal_list_text_2">Click add to get started</string>
</resources>
